# shift-intensive-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: __init__.py  eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml
configs/data/: cs_datamodule.yaml
configs/data/augmentations/: default.yaml
configs/debug/: default.yaml  fdr.yaml  overfit.yaml
configs/experiment/: baseline.yaml  example.yaml
configs/extras/: default.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  many_loggers.yaml  tensorboard.yaml
configs/model/: base_det.yaml  fast.yaml
configs/model/components/: base_model.yaml
configs/model/components/backbone/: mobilenet_v3_large.yaml
configs/model/components/detector/: rcnn.yaml
configs/model/optimizer/: adam.yaml
configs/model/scheduler/: chaincyclic.yaml
configs/paths/: default.yaml
configs/trainer/: ddp_sim.yaml  default.yaml  gpu.yaml
data/train/labels/: CS_1_0005.txt
data/val/labels/: CS_1_0001.txt
src/: eval.py  train.py
src/data/: cs_datamodule.py
src/data/components/: cs_dataset.py
src/lit_modules/: callbacks.py  schedulers.py
src/models/: det_module.py  detection_module.py  timm_module.py
src/models/components/: base_model.py  losses.py
src/models/components/backbones/: timm_backbone.py
src/models/components/detectors/: fasterRCNN.py
src/utils/: instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
src/utils/metrics/: metrics_fast.py
src/utils/metrics/iou_cuda/: inter_union_cuda.cu  setup.py
