[project]
name = "shift-intensive-modeling"
version = "0.1.0"
description = "Detection project"
authors = [
    { name = "Alex Nerf", email = "a.varnakin@g.nsu.ru" },
    {name = "LimeShot",email = "il.chumackov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14.1"
dependencies = [
    "torch (>=2.12.0,<3.0.0)",
    "torchvision (>=0.27.0,<0.28.0)",
    "lightning (>=2.6.1,<3.0.0)",
    "torchmetrics (>=1.9.0,<2.0.0)",
    "timm (>=1.0.27,<2.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "rootutils (>=1.0.7,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "hydra-colorlog (>=1.2.0,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "gdown (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
